WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156959
play-state not parsed as part of animation shorthand
https://bugs.webkit.org/show_bug.cgi?id=156959
Summary
play-state not parsed as part of animation shorthand
Simon Fraser (smfr)
Reported
2016-04-24 10:33:00 PDT
Created
attachment 277190
[details]
Testcase We fail to look for animation-play-state when parsing the animation shorthand.
Attachments
Testcase
(995 bytes, text/html)
2016-04-24 10:33 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(17.65 KB, patch)
2016-04-24 11:48 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-04-24 11:48:53 PDT
Created
attachment 277193
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-04-25 13:07:04 PDT
https://trac.webkit.org/r200043
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug